# flask-graphql-todo

./: .gitignore  README.md  main.py  pyproject.toml  todo.db
api/: __init__.py
api/models/: todo.py
api/schemas/: mutations.py  queries.py
api/urls/: urls.py
graphql-schema/: schema.graphql
