[tool.poetry]
name = "flask-graphql"
version = "0.1.0"
description = "Practice project for graphql(ariadne) and flask"
authors = ["Sambeg Shrestha <sthasam2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
ariadne = "^0.12.0"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
